[tool.poetry]
name = "bot-exchange"
version = "0.0.1"
description = ""
authors = ["Daniel Cesar <daniel_csar@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
mercadopago = "^2.2.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
